# disco

./: pyproject.toml  requirements.txt
configs/: main.yaml
configs/dataset/: idsprites_disk.yaml
disco/: __init__.py
disco/data/: __init__.py  continual_benchmark_disk.py  file_dataset.py
disco/lightning/: __init__.py  callbacks.py  modules.py
disco/models/: blocks.py  mlp.py
disco/train/: train.py  train_from_disk.py  util.py
disco/visualization/: visualization.py
slurm/: train.sh  train_lustre.sh  train_qb.sh
