[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disco"
version = "0.1.0"
authors = [
    {name = "Sebastian Dziadzio", email = "dziadzio@hey.com"},
]
description = "Disentangling memorization and generalization in continual learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core",
    "lightning",
    "lightning-bolts",
    "matplotlib",
    "numba",
    "numpy",
    "omegaconf",
    "opencv-python",
    "pillow",
    "scipy",
    "scikit-learn",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
dev = ["memray", "pytest", "torchmetrics"]

[tool.hatch.build]
include = ["disco"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B905"] # disable zip-without-explicit-strict
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # disable unused-import in __init__.py files